--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.5.2",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.3",
     "sonner": "^2.0.5",
